# Lab1-2021111045

./: README.md  graph.cpp  graph.h  log.txt  main.cpp  randomwalk.txt  readFile.cpp  text.txt
src/: CMakeLists.txt  graph.cpp  graph.gcda  graph.gcno  main.cpp  readFile.cpp  readFile.h  text.txt
test/: CMakeLists.txt  blacktest.cpp
